# python_extract_text

./: README.md  main.py  pyproject.toml  requirements.txt  string_parser.py
